--- a/app/views/usermanage/edit.jade
+++ b/app/views/usermanage/edit.jade
@@ -45,7 +45,7 @@ block content
                                                     .form-group
                                                         label.col-sm-2.control-label 입력한 회사명
                                                         .col-sm-9
-                                                            input.form-control(name='usermanage[userCompany_nm]', type='text', value=usermanage.userCompany_nm, required)
+                                                            input.form-control(name='usermanage[userCompany_nm]', type='text', value=usermanage.userCompany_nm, readonly)
                                                     .form-group(style='display:none')
                                                         label.col-sm-2.control-label 회사코드명
                                                         .col-sm-9
@@ -134,3 +134,9 @@ block content
                                                             select.form-control(id='access_yn' name='usermanage[access_yn]' type='text' value='#{usermanage.access_yn}')
                                                                 option(value='Y') 승인 
                                                                 option(value='N') 미승인
+                                                    .form-group
+                                                        label.col-sm-2.control-label 사용여부
+                                                        .col-sm-9
+                                                            select.form-control(id='using_yn' name='usermanage[using_yn]' type='text' value='#{usermanage.using_yn}')
+                                                                option(value='Y') 사용 
+                                                                option(value='N') 사용안함
