--- a/app/views/usermanage/new.jade
+++ b/app/views/usermanage/new.jade
@@ -131,3 +131,9 @@ block content
                                                                 select.form-control(id='access_yn' name='usermanage[access_yn]' type='text')
                                                                     option(value='Y') 승인 
                                                                     option(value='N' Selected) 미승인
+                                                        .form-group
+                                                            label.col-sm-2.control-label 사용여부
+                                                            .col-sm-9
+                                                                select.form-control(id='using_yn' name='usermanage[using_yn]' type='text')
+                                                                    option(value='Y' Selected) 사용 
+                                                                    option(value='N') 사용안함
