--- a/app/views/incident/new.jade
+++ b/app/views/incident/new.jade
@@ -1,9 +1,10 @@
 extends ../layouts/default
 block head
-
     // summernot
-    link(href='/plugins/summernote/dist/summernote.css', rel='stylesheet')
+    //link(href='/plugins/summernote/dist/summernote.css', rel='stylesheet')
+    link(href='http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.6/summernote.css', rel='stylesheet')
     
+
     link(href='/plugins/switchery/switchery.min.css', rel='stylesheet')
     link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
     link(href='/assets/css/core.css', rel='stylesheet', type='text/css')
@@ -14,7 +15,7 @@ block head
     link(href='/assets/css/responsive.css', rel='stylesheet', type='text/css')
 
     //첨부파일
-    link(href='/vendor/fileupload/css/fileinput.css', media='all', rel='stylesheet', type='text/css')
+    //link(href='/vendor/fileupload/css/fileinput.css', media='all', rel='stylesheet', type='text/css')
 
     script(src='/assets/js/modernizr.min.js')
     // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
@@ -47,12 +48,17 @@ block head
     script(src='/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
     script(src='/plugins/bootstrap-daterangepicker/daterangepicker.js')
     // form summernote
-    script(src='/plugins/summernote/dist/summernote.min.js')
-
+    //script(src='/plugins/summernote/dist/summernote.min.js')
+    script(src='http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.6/summernote.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.6/lang/summernote-ko-KR.min.js')
+    
+    
     //첨부파일
-    script(src='/vendor/fileupload/js/fileinput.js', type='text/javascript')
+    //script(src='/vendor/fileupload/js/fileinput.js', type='text/javascript')
+    //link(href='/vendor/fileupload/css/fileinput.css', media='all', rel='stylesheet', type='text/css')
 
     script(src='/isu/js/incident/new.js', type='text/javascript')
+    
 
 
 block content
@@ -80,7 +86,7 @@ block content
                     .col-lg-12
                         .card-box.m-t-10
                             .p-20
-                                form.form-horizontal.group-border-dashed(id='form' name='form' action='/incident/new' method='post' enctype="multipart/form-data")  
+                                form.form-horizontal.group-border-dashed(id='form' name='form' action='/incident/new' method='post' enctype='multipart/form-data')  
                                     .form-group
                                         label.col-sm-2.control-label 요청업무
                                         .col-sm-4
