--- a/app/views/incident/new_mng.jade
+++ b/app/views/incident/new_mng.jade
@@ -3,7 +3,9 @@ block head
 
     // summernot
     link(href='/plugins/summernote/dist/summernote.css', rel='stylesheet')
-    
+    // form summernote
+    script(src='/plugins/summernote/dist/summernote.min.js')
+
     link(href='/plugins/switchery/switchery.min.css', rel='stylesheet')
     link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
     link(href='/assets/css/core.css', rel='stylesheet', type='text/css')
@@ -18,7 +20,9 @@ block head
 
     //첨부파일
     link(href='/vendor/fileupload/css/fileinput.css', media='all', rel='stylesheet', type='text/css')
-
+    //첨부파일
+    script(src='/vendor/fileupload/js/fileinput.js', type='text/javascript')
+    
     script(src='/assets/js/modernizr.min.js')
     // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
     // WARNING: Respond.js doesn't work if you view the page via file://
@@ -27,9 +31,9 @@ block head
     script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
 
     // jQuery
-    script(src='/assets/js/jquery.min.js')
-    script(src='/assets/js/bootstrap.min.js')
-    script(src='/assets/js/detect.js')
+    //script(src='/assets/js/jquery.min.js')
+    //script(src='/assets/js/bootstrap.min.js')
+    //script(src='/assets/js/detect.js')
     script(src='/assets/js/fastclick.js')
     script(src='/assets/js/jquery.slimscroll.js')
     script(src='/assets/js/jquery.blockUI.js')
@@ -49,11 +53,9 @@ block head
     script(src='/plugins/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js')
     script(src='/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
     script(src='/plugins/bootstrap-daterangepicker/daterangepicker.js')
-    // form summernote
-    script(src='/plugins/summernote/dist/summernote.min.js')
+    
 
-    //첨부파일
-    script(src='/vendor/fileupload/js/fileinput.js', type='text/javascript')
+    
 
     script(src='/vendor/jquery/jquery-ui.1.11.0.js')
     script(src='/isu/js/incident/new_mng.js', type='text/javascript')
