--- a/app/views/incident/new.jade
+++ b/app/views/incident/new.jade
@@ -23,28 +23,28 @@ block head
     script(src='/assets/js/modernizr.min.js')
 
     // jQuery
-    script(src='/assets/js/jquery.min.js')
-    script(src='/assets/js/bootstrap.min.js')
-    script(src='/assets/js/detect.js')
-    script(src='/assets/js/fastclick.js')
-    script(src='/assets/js/jquery.slimscroll.js')
-    script(src='/assets/js/jquery.blockUI.js')
-    script(src='/assets/js/waves.js')
-    script(src='/assets/js/wow.min.js')
-    script(src='/assets/js/jquery.nicescroll.js')
-    script(src='/assets/js/jquery.scrollTo.min.js')
-    script(src='/plugins/switchery/switchery.min.js')
-    script(src='/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js')
-    script(type='text/javascript', src='/plugins/multiselect/js/jquery.multi-select.js')
-    script(type='text/javascript', src='/plugins/jquery-quicksearch/jquery.quicksearch.js')
-    script(src='/plugins/select2/select2.min.js', type='text/javascript')
-    script(src='/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js', type='text/javascript')
-    script(src='/plugins/bootstrap-inputmask/bootstrap-inputmask.min.js', type='text/javascript')
-    script(src='/plugins/moment/moment.js')
-    script(src='/plugins/timepicker/bootstrap-timepicker.min.js')
-    script(src='/plugins/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js')
-    script(src='/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
-    script(src='/plugins/bootstrap-daterangepicker/daterangepicker.js')
+    //script(src='/assets/js/jquery.min.js')
+    //script(src='/assets/js/bootstrap.min.js')
+    //script(src='/assets/js/detect.js')
+    //script(src='/assets/js/fastclick.js')
+    //script(src='/assets/js/jquery.slimscroll.js')
+    //script(src='/assets/js/jquery.blockUI.js')
+    //script(src='/assets/js/waves.js')
+    //script(src='/assets/js/wow.min.js')
+    //script(src='/assets/js/jquery.nicescroll.js')
+    //script(src='/assets/js/jquery.scrollTo.min.js')
+    //script(src='/plugins/switchery/switchery.min.js')
+    //script(src='/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js')
+    //script(type='text/javascript', src='/plugins/multiselect/js/jquery.multi-select.js')
+    //script(type='text/javascript', src='/plugins/jquery-quicksearch/jquery.quicksearch.js')
+    //script(src='/plugins/select2/select2.min.js', type='text/javascript')
+    //script(src='/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js', type='text/javascript')
+    //script(src='/plugins/bootstrap-inputmask/bootstrap-inputmask.min.js', type='text/javascript')
+    //script(src='/plugins/moment/moment.js')
+    //script(src='/plugins/timepicker/bootstrap-timepicker.min.js')
+    //script(src='/plugins/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js')
+    //script(src='/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
+    //script(src='/plugins/bootstrap-daterangepicker/daterangepicker.js')
     
     
     
