--- a/app/views/incident/new.jade
+++ b/app/views/incident/new.jade
@@ -43,8 +43,8 @@ block head
     //script(src='/plugins/moment/moment.js')
     //script(src='/plugins/timepicker/bootstrap-timepicker.min.js')
     //script(src='/plugins/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js')
-    //script(src='/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
-    //script(src='/plugins/bootstrap-daterangepicker/daterangepicker.js')
+    script(src='/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
+    script(src='/plugins/bootstrap-daterangepicker/daterangepicker.js')
     
     
     
