--- a/app/views/usermanage/index.jade
+++ b/app/views/usermanage/index.jade
@@ -35,6 +35,7 @@ block content
                                     label.col-sm-2.control-label 사용유무
                                     .col-sm-2
                                         select.form-control(id='using_yn' name='using_yn')
+                                            option(value ='*') 전체
                                             option(value ='Y') 사용
                                             option(value ='N') 미사용
                                 .form-group.m-b-0
