#KSY 미승인 사용자관리 추가 중

--- a/app/views/layouts/admin.jade
+++ b/app/views/layouts/admin.jade
@@ -152,6 +152,9 @@ html
                       | 사원정보관리(내외) 
                       //i.fa.fa-circle-o.text-pink.m-l-5
                   li
+                    a(href='/usermanageAccess/')
+                      | 미승인 사원관리
+                  li
                     a(href='/companyBusiness/') 회사별 상위업무지정
                   li
                     a(href='/processGubun/') 처리구분 코드조회
