--- a/app/views/incident/new.jade
+++ b/app/views/incident/new.jade
@@ -5,10 +5,14 @@ block head
     // form summernote
     script(src='/plugins/summernote/dist/summernote.min.js')
 
-
     //첨부파일
     script(src='/vendor/fileupload/js/fileinput.js', type='text/javascript')
     link(href='/vendor/fileupload/css/fileinput.css', media='all', rel='stylesheet', type='text/css')
+
+    //dropzone
+    link(href='/plugins/dropzone/dist/dropzone.css' rel='stylesheet', type='text/css')
+    script(src='/plugins/dropzone/dist/dropzone.js', type='text/javascript')
+
 
     link(href='/plugins/switchery/switchery.min.css', rel='stylesheet')
     link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
@@ -46,7 +50,8 @@ block head
     script(src='/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
     script(src='/plugins/bootstrap-daterangepicker/daterangepicker.js')
     
-    
+    //script(src='/assets/js/jquery.core.js')
+    //script(src='/assets/js/jquery.app.js')
     
     
 
@@ -130,7 +135,7 @@ block content
                                     .row
                                         .col-md-12.portlets
                                             .m-b-30
-                                                input#attach-file.file(name='incident[attach-file]', type='file', data-upload-url="#", multiple='')
+                                                input#attach-file.file(name='incident[attach-file]', type='file', data-upload-url="#", multiple)
 block footer
 
 
