#KSY login 화면 수정

--- a/app/views/usermanageAccess/edit.jade
+++ b/app/views/usermanageAccess/edit.jade
@@ -22,8 +22,8 @@ block content
                                     a(href='#') Home
                                 li
                                     a(href='#') SD 기본정보
-                                li.active 사원정보관리(내외)
-                            h4.page-title 사원정보관리(내외)
+                                li.active 미승인 사원관리
+                            h4.page-title 미승인 사원관리
                  // Form TYPE 1
                 .row
                     .col-lg-12
