--- a/app/views/statistic/high_lower.jade
+++ b/app/views/statistic/high_lower.jade
@@ -111,8 +111,8 @@ block content
                                         - for( var i = 0 ; length = incident.length > i ; i++ ){ //속도가 느리다고 알고 있음.
                                             //option(value ='#{companyProcess[i].higher_cd}') #{companyProcess[i].higher_nm}
                                             tr
-                                                th.valign-middle(id='higher_cd' scope='row') #{incident[i]._id.higher_cd}
-                                                td #{incident[i]._id.lower_cd}
+                                                th.valign-middle(id='higher_cd' scope='row') #{incident[i]._id.higher_nm}
+                                                td #{incident[i]._id.lower_nm}
                                                 td #{incident[i].count}
                                                 td 
                                                 td 
