--- a/app/views/main/admin.jade
+++ b/app/views/main/admin.jade
@@ -54,23 +54,23 @@ block content
                     .col-sm-6.col-lg-3
                         .widget-simple-chart.text-right.card-box
                             .circliful-chart(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#5fbeaa', data-fontsize='14', data-percent='35', data-text='35%', data-width='5')
-                            h3.text-success.counter 2562
+                            h3#status1.text-success
                             p.text-muted.text-nowrap 접수대기
                     .col-sm-6.col-lg-3
                         .widget-simple-chart.text-right.card-box
                             .circliful-chart(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#3bafda', data-fontsize='14', data-percent='75', data-text='75%', data-width='5')
-                            h3.text-primary.counter 5685
+                            h3#status2.text-primary
                             p.text-muted.text-nowrap 처리중
                     .col-sm-6.col-lg-3
                         .widget-simple-chart.text-right.card-box
                             .circliful-chart(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#f76397', data-fontsize='14', data-percent='58', data-text='58%', data-width='5')
-                            h3.text-pink.counter 248
-                            p.text-muted.text-nowrap 처리완료
+                            h3#status3.text-pink
+                            p.text-muted.text-nowrap 미평가
                     .col-sm-6.col-lg-3
                         .widget-simple-chart.text-right.card-box
                             .circliful-chart(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#98a6ad', data-fontsize='14', data-percent='49', data-text='49%', data-width='5')
-                            h3.text-inverse.counter 62
-                            p.text-muted.text-nowrap 보류
+                            h3#status4.text-inverse
+                            p.text-muted.text-nowrap 처리완료
                 // end row
                 // start Chart
                 .row
