--- a/app/views/main/admin.jade
+++ b/app/views/main/admin.jade
@@ -25,15 +25,15 @@ block head
     script(src='/assets/pages/jquery.dashboard.js')
 
     script(type='text/javascript').
+    
         jQuery(document).ready(function($) {
             $('.counter').counterUp({
                 delay: 100,
                 time: 1200
             });
-            $('.circliful-chart').circliful();
-            alert(incident);
+            //$('.circliful-chart').circliful();
         });
-
+    
     
 
 block content
@@ -53,22 +53,22 @@ block content
                 .row
                     .col-sm-6.col-lg-3
                         .widget-simple-chart.text-right.card-box
-                            .circliful-chart(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#5fbeaa', data-fontsize='14', data-percent='35', data-text='35%', data-width='5')
+                            .circliful-chart#chart1(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#5fbeaa', data-fontsize='14', data-percent='35', data-text='35%', data-width='5')
                             h3#status1.text-success
                             p.text-muted.text-nowrap 접수대기
                     .col-sm-6.col-lg-3
                         .widget-simple-chart.text-right.card-box
-                            .circliful-chart(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#3bafda', data-fontsize='14', data-percent='75', data-text='75%', data-width='5')
+                            .circliful-chart#chart2(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#3bafda', data-fontsize='14', data-percent='75', data-text='75%', data-width='5')
                             h3#status2.text-primary
                             p.text-muted.text-nowrap 처리중
                     .col-sm-6.col-lg-3
                         .widget-simple-chart.text-right.card-box
-                            .circliful-chart(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#f76397', data-fontsize='14', data-percent='58', data-text='58%', data-width='5')
+                            .circliful-chart#chart3(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#f76397', data-fontsize='14', data-percent='', data-text='', data-width='5')
                             h3#status3.text-pink
                             p.text-muted.text-nowrap 미평가
                     .col-sm-6.col-lg-3
                         .widget-simple-chart.text-right.card-box
-                            .circliful-chart(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#98a6ad', data-fontsize='14', data-percent='49', data-text='49%', data-width='5')
+                            .circliful-chart#chart4(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#98a6ad', data-fontsize='14', data-percent='', data-text='', data-width='5')
                             h3#status4.text-inverse
                             p.text-muted.text-nowrap 처리완료
                 // end row
