--- a/app/views/main/admin.jade
+++ b/app/views/main/admin.jade
@@ -53,12 +53,12 @@ block content
                 .row
                     .col-sm-6.col-lg-3
                         .widget-simple-chart.text-right.card-box
-                            .circliful-chart#chart1(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#5fbeaa', data-fontsize='14', data-percent='35', data-text='35%', data-width='5')
+                            .circliful-chart#chart1(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#5fbeaa', data-fontsize='14', data-percent='', data-text='', data-width='5')
                             h3#status1.text-success
                             p.text-muted.text-nowrap 접수대기
                     .col-sm-6.col-lg-3
                         .widget-simple-chart.text-right.card-box
-                            .circliful-chart#chart2(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#3bafda', data-fontsize='14', data-percent='75', data-text='75%', data-width='5')
+                            .circliful-chart#chart2(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#3bafda', data-fontsize='14', data-percent='', data-text='', data-width='5')
                             h3#status2.text-primary
                             p.text-muted.text-nowrap 처리중
                     .col-sm-6.col-lg-3
