--- a/app/views/main/admin.jade
+++ b/app/views/main/admin.jade
@@ -21,8 +21,8 @@ block head
     // circliful Chart
     script(src='/plugins/jquery-circliful/js/jquery.circliful.min.js')
     script(src='/plugins/jquery-sparkline/jquery.sparkline.min.js')
-    //Page js
-    script(src='/assets/pages/jquery.dashboard.js')
+    // 증감표
+    //script(src='/assets/pages/jquery.dashboard.js')
 
     script(type='text/javascript').
         jQuery(document).ready(function($) {
