--- a/app/views/main/admin.jade
+++ b/app/views/main/admin.jade
@@ -11,6 +11,7 @@ block head
     //script(src='/assets/js/jquery.nicescroll.js')
     //script(src='/assets/js/jquery.scrollTo.min.js')
     script(src='/isu/js/main/admin.js')
+    script(src='/isu/js/statistic/chart_main.js')
     
     script(src='/plugins/switchery/switchery.min.js')
     // skycons
@@ -22,6 +23,7 @@ block head
     script(src='/plugins/jquery-circliful/js/jquery.circliful.min.js')
     script(src='/plugins/jquery-sparkline/jquery.sparkline.min.js')
     //Page js
+    //chart_main.js 수정 후 삭제
     script(src='/assets/pages/jquery.dashboard.js')
 
     script(type='text/javascript').
