#KSY 일반사용자 화면 분개

--- a/app/views/main/admin.jade
+++ b/app/views/main/admin.jade
@@ -24,7 +24,7 @@ block head
     script(src='/plugins/jquery-sparkline/jquery.sparkline.min.js')
     //Page js
     //chart_main.js 수정 후 삭제
-    script(src='/assets/pages/jquery.dashboard.js')
+    //script(src='/assets/pages/jquery.dashboard.js')
 
     script(type='text/javascript').
     
