--- a/app/views/main/user.jade
+++ b/app/views/main/user.jade
@@ -1,17 +1,7 @@
 extends ../layouts/default
 
 block head
-    //script(src='/assets/js/detect.js')
-    //script(src='/assets/js/fastclick.js')
-    //script(src='/assets/js/jquery.slimscroll.js')
-    //script(src='/assets/js/jquery.blockUI.js')
-
-    //script(src='/assets/js/waves.js')
-    //script(src='/assets/js/wow.min.js')
-    //script(src='/assets/js/jquery.nicescroll.js')
-    //script(src='/assets/js/jquery.scrollTo.min.js')
     script(src='/isu/js/main/user.js')
-    
     script(src='/plugins/switchery/switchery.min.js')
     // skycons
     script(src='/plugins/skyicons/skycons.min.js', type='text/javascript')
@@ -21,20 +11,6 @@ block head
     // circliful Chart
     script(src='/plugins/jquery-circliful/js/jquery.circliful.min.js')
     script(src='/plugins/jquery-sparkline/jquery.sparkline.min.js')
-    //Page js
-    script(src='/assets/pages/jquery.dashboard.js')
-
-    script(type='text/javascript').
-        jQuery(document).ready(function($) {
-            $('.counter').counterUp({
-                delay: 100,
-                time: 1200
-            });
-            $('.circliful-chart').circliful();
-            alert(incident);
-        });
-
-    
 
 block content
     .content-page
@@ -53,63 +29,28 @@ block content
                 .row
                     .col-sm-6.col-lg-3
                         .widget-simple-chart.text-right.card-box
-                            .circliful-chart(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#5fbeaa', data-fontsize='14', data-percent='35', data-text='35%', data-width='5')
-                            h3.text-success.counter 2562
+                            .circliful-chart#chart1(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#5fbeaa', data-fontsize='14', data-percent='', data-text='', data-width='5')
+                            h3#status1.text-success
                             p.text-muted.text-nowrap 접수대기
                     .col-sm-6.col-lg-3
                         .widget-simple-chart.text-right.card-box
-                            .circliful-chart(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#3bafda', data-fontsize='14', data-percent='75', data-text='75%', data-width='5')
-                            h3.text-primary.counter 5685
+                            .circliful-chart#chart2(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#3bafda', data-fontsize='14', data-percent='', data-text='', data-width='5')
+                            h3#status2.text-primary
                             p.text-muted.text-nowrap 처리중
                     .col-sm-6.col-lg-3
                         .widget-simple-chart.text-right.card-box
-                            .circliful-chart(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#f76397', data-fontsize='14', data-percent='58', data-text='58%', data-width='5')
-                            h3.text-pink.counter 248
-                            p.text-muted.text-nowrap 처리완료
+                            .circliful-chart#chart3(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#f76397', data-fontsize='14', data-percent='', data-text='', data-width='5')
+                            h3#status3.text-pink
+                            p.text-muted.text-nowrap 미평가
                     .col-sm-6.col-lg-3
                         .widget-simple-chart.text-right.card-box
-                            .circliful-chart(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#98a6ad', data-fontsize='14', data-percent='49', data-text='49%', data-width='5')
-                            h3.text-inverse.counter 62
-                            p.text-muted.text-nowrap 보류
-                // end row
-                // start Chart
-                .row
-                    .col-lg-6
-                        .card-box
-                            h4.text-dark.header-title.m-t-0.m-b-30 당월 현황 조회
-                            .widget-chart.text-center
-                                #sparkline2
-                                ul.list-inline.m-t-15
-                                    li
-                                        h5.text-muted.m-t-20 요청처리
-                                        h4.m-b-0 75%
-                                    li
-                                        h5.text-muted.m-t-20 응답율
-                                        h4.m-b-0 100%
-                                    li
-                                        h5.text-muted.m-t-20 만족율
-                                        h4.m-b-0 90%
-                    .col-lg-6
-                        .card-box
-                            h4.text-dark.header-title.m-t-0.m-b-30 증감표
-                            .widget-chart.text-center
-                                #sparkline1
-                                ul.list-inline.m-t-15
-                                    li
-                                        h5.text-muted.m-t-20 2015
-                                        h4.m-b-0 523
-                                    li
-                                        h5.text-muted.m-t-20 2016
-                                        h4.m-b-0 615
-                                    li
-                                        h5.text-muted.m-t-20 2017
-                                        h4.m-b-0 455
-                // end Chart
-                // start 접수현황
+                            .circliful-chart#chart4(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#98a6ad', data-fontsize='14', data-percent='', data-text='', data-width='5')
+                            h3#status4.text-inverse
+                            p.text-muted.text-nowrap 처리완료
                 .row
                     .col-lg-12
                         .card-box
-                            h4.text-dark.header-title.m-t-0 처리현황
+                            h4.text-dark.header-title.m-t-0 미평가현황
                             .table-responsive
                                 table.table
                                     thead
@@ -118,7 +59,22 @@ block content
                                             th.text-center(width='13%') 등록일
                                             th.text-center(width='10%') 요청경로
                                             th.text-center(width='10%') 진행구분
-                                            th.text-center(width='10%') 담당자
+                                            th.text-center(width='11%') 담당자
+                                            th.text-center(width='13%') 접수(완료)일
+                                    tbody(id='more_list_nocomplete')
+                .row
+                    .col-lg-12
+                        .card-box
+                            h4.text-dark.header-title.m-t-0 요청처리현황
+                            .table-responsive
+                                table.table
+                                    thead
+                                        tr
+                                            th.text-center 제목
+                                            th.text-center(width='13%') 등록일
+                                            th.text-center(width='10%') 요청경로
+                                            th.text-center(width='10%') 진행구분
+                                            th.text-center(width='11%') 담당자
                                             th.text-center(width='13%') 접수(완료)일
                                     tbody(id='more_list')
 block footer
