--- a/app/views/main/admin.jade
+++ b/app/views/main/admin.jade
@@ -78,7 +78,7 @@ block content
                 .row
                     .col-lg-6
                         .card-box
-                            h4.text-dark.header-title.m-t-0.m-b-30 당월 현황 조회
+                            h4.text-dark.header-title.m-t-0.m-b-30 만족도 현황
                             .widget-chart.text-center
                                 #sparkline2
                                 ul.list-inline.m-t-15
