--- a/app/views/main/admin.jade
+++ b/app/views/main/admin.jade
@@ -98,14 +98,11 @@ block content
                                 #sparkline1
                                 ul.list-inline.m-t-15
                                     li
-                                        h5.text-muted.m-t-20 2015
-                                        h4.m-b-0 523
+                                        h5.text-muted.m-t-20#chartPreYear
+                                        h4.m-b-0#chartPreYearCnt
                                     li
-                                        h5.text-muted.m-t-20 2016
-                                        h4.m-b-0 615
-                                    li
-                                        h5.text-muted.m-t-20 2017
-                                        h4.m-b-0 455
+                                        h5.text-muted.m-t-20#chartYear
+                                        h4.m-b-0#chartYearCnt
                 // end Chart
                 // start 접수현황
                 .row
