--- a/app/views/main/admin.jade
+++ b/app/views/main/admin.jade
@@ -80,10 +80,14 @@ block content
                         .card-box
                             h4.text-dark.header-title.m-t-0.m-b-30 만족도 현황
                             .widget-chart.text-center
+                                br
                                 #sparkline2
-                                ul.list-inline.m-t-15
+                                h5.text-muted  &nbsp;1 &nbsp;&nbsp;&nbsp;2 &nbsp;&nbsp;&nbsp;3 &nbsp;&nbsp;&nbsp;4 &nbsp;&nbsp;&nbsp;5 &nbsp;&nbsp;&nbsp;6 &nbsp;&nbsp;&nbsp;7 &nbsp;&nbsp;&nbsp;8 &nbsp;&nbsp;9 &nbsp;&nbsp;10 &nbsp;&nbsp;11 &nbsp;12
+                                h4.m-b-0 Month
+                                
+                                //ul.list-inline.m-t-15
                                     li
-                                        h5.text-muted.m-t-20 요청처리
+                                        h5.text-muted.m-t-20 1
                                         h4.m-b-0 75%
                                     li
                                         h5.text-muted.m-t-20 응답율
