--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -3,6 +3,11 @@
     extends ../layouts/user
 - }
 
+//팀장
+- if(session.user_flag ==5){ 
+    extends ../layouts/deptadmin
+- }
+
 //업무담당자
 - if(session.user_flag !=9){
     extends ../layouts/admin
