#KSY 미승인사용자관리 전체승인 적용

--- a/app/views/usermanageAccess/index.jade
+++ b/app/views/usermanageAccess/index.jade
@@ -45,6 +45,11 @@ block content
                                         button.btn.btn-primary(id='searchBtn' type='button') 조회
                 .row
                     .col-sm-12
+                        .btn-toolbar.form-group
+                                .pull-left
+                                    a.btn.btn-primary.waves-effect.waves-light.m-l-5(onclick='allAccess()')
+                                        i.fa.fa-check-square-o
+                                        |  전체 승인
                         .card-box
                             table.table.table-bordered
                                 thead
