--- a/app/views/layouts/deptadmin.jade
+++ b/app/views/layouts/deptadmin.jade
@@ -95,7 +95,7 @@ html
                       | 처리된 내용검색 
                       //i.fa.fa-circle-o.text-pink.m-l-5
               //그룹관리자, 업무관리자,업무담당자 오픈
-              - if(session.user_flag ==1 || session.user_flag ==3 || session.user_flag ==4){ 
+              - if(session.user_flag ==1 || session.user_flag ==3 || session.user_flag ==4 || session.user_flag ==5){ 
               li.has_sub
                 a.waves-effect.waves-primary(href='javascript:void(0);')
                   i.md.md-person
