--- a/app/views/layouts/admin.jade
+++ b/app/views/layouts/admin.jade
@@ -159,7 +159,7 @@ html
                     a(href='/usermanageAccess/')
                       | 미승인 사원관리
                   li
-                    a(href='/companyBusiness/') 회사별 상위업무지정
+                    a(href='/companyProcess/') 회사별 상위업무지정
                   li
                     a(href='/processGubun/') 처리구분 코드조회
                   //li
