--- a/app/views/layouts/user.jade
+++ b/app/views/layouts/user.jade
@@ -107,7 +107,7 @@ html
                   li
                     a(href='/manager/work_list') 나의 업무처리현황
                   li
-                    a(href='/myBusiness/') 나의 업무지정
+                    a(href='/myProcess/') 나의 업무지정
                   li
                     a(href='/manager/month_list') 월별 처리내역
               - */
