--- a/app/views/layouts/deptadmin.jade
+++ b/app/views/layouts/deptadmin.jade
@@ -108,7 +108,7 @@ html
                   li
                     a(href='/manager/work_list') 나의 업무처리현황
                   li
-                    a(href='/myBusiness/') 나의 업무지정
+                    a(href='/myProcess/') 나의 업무지정
                   li
                     a(href='/manager/month_list') 월별 처리내역
               - }
@@ -159,7 +159,7 @@ html
                     a(href='/usermanageAccess/')
                       | 미승인 사원관리
                   li
-                    a(href='/companyBusiness/') 회사별 상위업무지정
+                    a(href='/companyProcess/') 회사별 상위업무지정
                   li
                     a(href='/processGubun/') 처리구분 코드조회
                   //li
