# 관리자 메인 리스트 긴급구분 추가

--- a/app/views/main/admin.jade
+++ b/app/views/main/admin.jade
@@ -117,11 +117,12 @@ block content
                                 table.table
                                     thead
                                         tr
+                                            th.text-center(width='6%') 긴급
                                             th.text-center 제목
-                                            th.text-center(width='13%') 등록일
+                                            th.text-center(width='11%') 등록일
                                             th.text-center(width='10%') 요청경로
                                             th.text-center(width='10%') 진행구분
-                                            th.text-center(width='10%') 담당자
+                                            th.text-center(width='11%') 담당자
                                             th.text-center(width='13%') 접수(완료)일
                                     tbody(id='more_list')
 block footer
