--- a/app/views/incident/new.jade
+++ b/app/views/incident/new.jade
@@ -108,7 +108,7 @@ block content
                                         .col-md-12.portlets
                                             .m-b-30
                                                 //input#attach-file.file(name='incident[attach-file]',  type='file', data-upload-url="#", multiple)
-                                                input#attach-file.file(name='incident[attach-file]', type='file', data-show-preview='false', multiple)
+                                                input#attach-file.file(name='incident[attach-file]', type='file', data-show-preview='false', data-show-upload='false', multiple)
 
 block footer
 
